@@ -4,10 +4,8 @@
     t.statistic <- function(x, y) {
         m <- length(x)
         n <- length(y)
-        xbar <- sum(x) / m
-        ybar <- sum(y) / n
-        #xvar <- var(x)
-        #yvar <- var(y)
+        xbar <- .Internal(mean(x))
+        ybar <- .Internal(mean(y))
         xvar <- .Internal(cov(x, NULL, 1, FALSE))
         yvar <- .Internal(cov(y, NULL, 1, FALSE))
         pooled <- sqrt(((m-1)*xvar + (n-1)*yvar) / (m+n-2))
